--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 	
 
 
-
-
-
 	 <nav class="navbar navbar-fixed-top" id="nav-wrapper">
 		 <div class="container">
 			 <div class="navbar-header">
@@ -55,7 +52,7 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 				 <ul class="nav navbar-nav">
 					 <li><a href="#plan">Schedule </a></li>
 					 <li><a href="#video">Video </a></li>
-					 <li><a href="#prizes">Top Prizes </a></li>
+					 <li><a href="#prizes">Our team </a></li>
 					 <li><a href="#sponsors">Sponsors </a></li>
 					 <li><a href="#gallery">Gallery </a></li>
 					 <li><a href="#gallery">Contact Us! </a></li>
@@ -67,12 +64,19 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 	 </nav>
 
 
+<div class = header">
+
 
 	 <section id="slider-full" class="slider-full" data-zs-bullets="false" data-zs-speed="22000" data-zs-interval="10000" data-zs-switchspeed="400" data-zs-src='["assets/images/_slider-1.jpg","assets/images/_slider-2.jpg","assets/images/_slider-3.jpg","assets/images/_slider-4.jpg"]' data-zs-overlay="false">
+			 	<video autoplay muted loop id="myVideo">
+  <source src="mait_video.mp4" type="video/mp4">
+</video>
 		 <div class="container">
+
+
 			 <div class="content">
 				 <div class="calendar">
-					 <span class="month">april '17 </span>
+					 <span class="month margin-top="-30px" >april '17 </span>
 					 <span class="day">23-25 </span>
 				 </div>
 				 <h1>Largest Tech Fest</br>Around you!<span>Fest 2017 </span></h1>
@@ -101,6 +105,8 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 			 </div>	
 		 </div>
 	 </div>
+	</div>
+
 
 
 	<form class = "form">
@@ -173,9 +179,63 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 			 <a href="https://www.youtube.com/watch?v=bXMrnGzsLhg&autoplay=1" class="swipebox"><span class="fa fa-play-circle"></span></a>
 		 </div>
 	 </section>
-	 <section id="prizes">
+
+ <section id="ticket">
 		 <div class="container">
-			 <h3>Top Prizes </h3>
+			 <h3>Events </h3>
+			 <div class="row">
+				 <div class="col-md-4">
+					 <div class="item matchHeight">
+						 <div class="header">Standart </div>
+						 <div class="price">$30 </div>
+						 <ul>
+							 <li>Tickets for 3 days </li>
+							 <li>Zone A,B,C </li>
+							 <li>1 degustation </li>
+							 <li>Guru Master-class </li>
+							 <li>Show Programms </li>
+						 </ul>
+						 <div class="clearfix"></div>						
+						 <a href="#" class="btn btn-pink">Get ticket </a>
+					 </div>
+				 </div>
+				 <div class="col-md-4">
+					 <div class="item matchHeight">				
+						 <div class="header">Business </div>
+						 <div class="price">$69 </div>
+						 <ul>
+							 <li>Tickets for 3 days </li>
+							 <li>Zone A,B,C </li>
+							 <li>1 degustation </li>
+							 <li>Guru Master-class </li>
+							 <li>Show Programms </li>
+						 </ul>
+						 <div class="clearfix"></div>						
+						 <a href="#" class="btn btn-pink">Get ticket </a>
+					 </div>
+				 </div>
+				 <div class="col-md-4">
+					 <div class="item matchHeight premium">				
+						 <div class="header">Premium </div>
+						 <div class="price">$125 </div>
+						 <ul>
+							 <li>Tickets for 3 days </li>
+							 <li>Zone A,B,C </li>
+							 <li>1 degustation </li>
+							 <li>Guru Master-class </li>
+							 <li>Show Programms </li>
+						 </ul>
+						 <div class="clearfix"></div>
+						 <a href="#" class="btn btn-red">Get ticket </a>
+					 </div>
+				 </div>
+			 </div>
+		 </div>	
+	 </section>
+
+	  <section id="prizes">
+		 <div class="container">
+			 <h3>Our team! </h3>
 			 <div class="row">
 				 <div class="col-md-4 item-left">
 					 <div class="item">
@@ -252,59 +312,9 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 			 </div>
 		 </div>
 	 </section>
+	
 
-	 <section id="ticket">
-		 <div class="container">
-			 <h3>Get Your Ticket </h3>
-			 <div class="row">
-				 <div class="col-md-4">
-					 <div class="item matchHeight">
-						 <div class="header">Standart </div>
-						 <div class="price">$30 </div>
-						 <ul>
-							 <li>Tickets for 3 days </li>
-							 <li>Zone A,B,C </li>
-							 <li>1 degustation </li>
-							 <li>Guru Master-class </li>
-							 <li>Show Programms </li>
-						 </ul>
-						 <div class="clearfix"></div>						
-						 <a href="#" class="btn btn-pink">Get ticket </a>
-					 </div>
-				 </div>
-				 <div class="col-md-4">
-					 <div class="item matchHeight">				
-						 <div class="header">Business </div>
-						 <div class="price">$69 </div>
-						 <ul>
-							 <li>Tickets for 3 days </li>
-							 <li>Zone A,B,C </li>
-							 <li>1 degustation </li>
-							 <li>Guru Master-class </li>
-							 <li>Show Programms </li>
-						 </ul>
-						 <div class="clearfix"></div>						
-						 <a href="#" class="btn btn-pink">Get ticket </a>
-					 </div>
-				 </div>
-				 <div class="col-md-4">
-					 <div class="item matchHeight premium">				
-						 <div class="header">Premium </div>
-						 <div class="price">$125 </div>
-						 <ul>
-							 <li>Tickets for 3 days </li>
-							 <li>Zone A,B,C </li>
-							 <li>1 degustation </li>
-							 <li>Guru Master-class </li>
-							 <li>Show Programms </li>
-						 </ul>
-						 <div class="clearfix"></div>
-						 <a href="#" class="btn btn-red">Get ticket </a>
-					 </div>
-				 </div>
-			 </div>
-		 </div>	
-	 </section>
+	
 
 	 <section id="gallery">
 		 <div class="container">
@@ -445,13 +455,14 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 			 <img src="assets/images/logo.png" class="logo" alt="Logo" />
 
 			 <ul class="menu-footer hidden-ms hidden-xs">
-				 <li><a href="#plan">Schedule </a></li>
-				 <li><a href="#video">Video </a></li>
-				 <li><a href="#prizes">Top Prizes </a></li>
-				 <li><a href="#sponsors">Sponsors </a></li>
-				 <li><a href="#tickets">Tickets </a></li>
-				 <li><a href="#gallery">Gallery </a></li>
-				 <li><a href="#form">Register </a></li>
+					 <li><a href="#plan">Schedule </a></li>
+					 <li><a href="#video">Video </a></li>
+					 <li><a href="#prizes">Our team </a></li>
+					 <li><a href="#sponsors">Sponsors </a></li>
+					 <li><a href="#gallery">Gallery </a></li>
+					 <li><a href="#gallery">Contact Us! </a></li>
+					 <!-- <li><a href="#gallery">Be a Representative </a></li> -->
+					 <li><a href="#form">Register </a></li>
 			 </ul>
 
 			 <div class="plan hidden-ms hidden-xs">
