--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 	 <meta name="author" content="" />
 	 <link rel="icon" type="image/png" href="assets/images/favicon.png" />
 
-	 <title>Vape Fest 2017 </title>
+	 <title>Techno Carnival 2017 </title>
 	
 	 <link href="assets/css/bootstrap-grid.css" rel="stylesheet" />
 	 <link href="assets/css/font-awesome.css" rel="stylesheet" />
@@ -55,7 +55,7 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 					 <li><a href="#prizes">Our team </a></li>
 					 <li><a href="#sponsors">Sponsors </a></li>
 					 <li><a href="#gallery">Gallery </a></li>
-					 <li><a href="#gallery">Contact Us! </a></li>
+					 <li><a href="#contactus">Contact Us! </a></li>
 					 <!-- <li><a href="#gallery">Be a Representative </a></li> -->
 					 <li><a href="#form">Register </a></li>
 				 </ul>
@@ -72,14 +72,14 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
   <source src="mait_video.mp4" type="video/mp4">
 </video>
 		 <div class="container">
-
+ <h1 = id="main_header" >Largest Tech Fest</br>Around you!<span>Techno Carnival </span></h1>
 
 			 <div class="content">
 				 <div class="calendar">
-					 <span class="month margin-top="-30px" >april '17 </span>
+					 <span class="month" >april '17 </span>
 					 <span class="day">23-25 </span>
 				 </div>
-				 <h1>Largest Tech Fest</br>Around you!<span>Fest 2017 </span></h1>
+				
 			 </div>
 		 </div>
 	 </section>
@@ -88,7 +88,7 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 			 <div class="row" id="countUp">
 				 <div class="col-md-3 col-sm-3 col-ms-6 col-xs-6">
 					 <span class="number numberCount" id="countUp-1">269 </span>
-					 <span class="header">Members </span>
+					 <span class="header">participants </span>
 				 </div>
 				 <div class="col-md-3 col-sm-3 col-ms-6 col-xs-6">
 					 <span class="number numberCount" id="countUp-2">45 </span>
@@ -96,11 +96,11 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 				 </div>
 				 <div class="col-md-3 col-sm-3 col-ms-6 col-xs-6">
 					 <span class="number numberCount" id="countUp-3">32 </span>
-					 <span class="header">Experts </span>
+					 <span class="header">mentors </span>
 				 </div>
 				 <div class="col-md-3 col-sm-3 col-ms-6 col-xs-6">
-					 <span class="number numberCount" id="countUp-4">1500 </span><span class="number">+ </span>
-					 <span class="header">Visitors </span>
+					 <span class="number numberCount" id="countUp-4">30 </span><span class="number">+ </span>
+					 <span class="header">hours of coding </span>
 				 </div>
 			 </div>	
 		 </div>
@@ -147,21 +147,21 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 
 	 <section id="plan">
 		 <div class="container">
-			 <h3>Vapefest Schedule </h3>
+			 <h3> Schedule </h3>
 			 <div class="row">
 				 <div class="col-md-4 col-sm-4">
 					 <div class="date">day 1 -  <span>april 23 </span></div>
-					 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 19:00 __ </span>
+					 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 18:00 am </span>
 					 <p>Morbi efficitur vitae orci __ volutpat. Donec nulla justo, _______ sed sodales ut, auctor _ ante. Integer nec libero _____ nisi consectetur rhoncus id ____ mi.  </p>
 				 </div>
 				 <div class="col-md-4 col-sm-4">
 					 <div class="date">day 2 -  <span>april 24 </span></div>
-					 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 19:00 __ </span>
+					 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 18:00 am </span>
 					 <p>Integer nec vitae nisi ___________ rhoncus id eget mi. ____ ullamcorper, augue ut rhoncus ________, enim arcu ornare est, ___ gravida nisi lectus ac ___.  </p>
 				 </div>
 				 <div class="col-md-4 col-sm-4">
 					 <div class="date">day 3 -  <span>april 25 </span></div>
-					 <span class="time"><span class="fa fa-clock-o"></span>12:00 am - 17:00 __ </span>
+					 <span class="time"><span class="fa fa-clock-o"></span>12:00 am - 18:00 am </span>
 					 <p>Morbi efficitur vitae orci __ volutpat. Donec nulla justo, _______ sed sodales ut, auctor _ ante. Integer nec libero _____ nisi consectetur rhoncus id ____ mi.  </p>
 				 </div>
 			 </div>
@@ -180,14 +180,14 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 		 </div>
 	 </section>
 
- <section id="ticket">
+ <section id="events">
 		 <div class="container">
 			 <h3>Events </h3>
 			 <div class="row">
 				 <div class="col-md-4">
 					 <div class="item matchHeight">
-						 <div class="header">Standart </div>
-						 <div class="price">$30 </div>
+						 <div class="header">First Ebent </div>
+						 <div class="price">goes here </div>
 						 <ul>
 							 <li>Tickets for 3 days </li>
 							 <li>Zone A,B,C </li>
@@ -201,8 +201,8 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 				 </div>
 				 <div class="col-md-4">
 					 <div class="item matchHeight">				
-						 <div class="header">Business </div>
-						 <div class="price">$69 </div>
+						 <div class="header">second event </div>
+						 <div class="price">goes here </div>
 						 <ul>
 							 <li>Tickets for 3 days </li>
 							 <li>Zone A,B,C </li>
@@ -214,10 +214,28 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 						 <a href="#" class="btn btn-pink">Get ticket </a>
 					 </div>
 				 </div>
+				  </div>
+				  <div class = "row">
 				 <div class="col-md-4">
 					 <div class="item matchHeight premium">				
-						 <div class="header">Premium </div>
-						 <div class="price">$125 </div>
+						 <div class="header">third event </div>
+						 <div class="price">goes here </div>
+						 <ul>
+							 <li>Tickets for 3 days </li>
+							 <li>Zone A,B,C </li>
+							 <li>1 degustation </li>
+							 <li>Guru Master-class </li>
+							 <li>Show Programms </li>
+						 </ul>
+						 <div class="clearfix"></div>
+						 <a href="#" class="btn btn-red">Get ticket </a>
+					 </div>
+				 </div>
+			
+			 	 <div class="col-md-4">
+					 <div class="item matchHeight premium">				
+						 <div class="header">third event </div>
+						 <div class="price">goes here </div>
 						 <ul>
 							 <li>Tickets for 3 days </li>
 							 <li>Zone A,B,C </li>
@@ -230,45 +248,80 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 					 </div>
 				 </div>
 			 </div>
+			
 		 </div>	
 	 </section>
 
-	  <section id="prizes">
+	  <section id="team">
+
 		 <div class="container">
-			 <h3>Our team! </h3>
-			 <div class="row">
-				 <div class="col-md-4 item-left">
-					 <div class="item">
-						 <div class="photo"><img src="assets/images/_icon-1.png" alt="Icon" /></div>
-						 <span class="num">15 </span>
-						 <span class="header">
-							 <span>RDA </span>
-							for cloudchasers winners
-						 </span>
-					 </div>
-				 </div>
-				 <div class="col-md-4 item-center">
-					 <div class="item">
-						 <div class="photo"><img src="assets/images/_icon-2.png" alt="Icon" /></div>			
-						 <span class="num">50 </span>
-						 <span class="header">
-							 <span>Coils </span>
-							for vaper winners
-						 </span>
-					 </div>
-				 </div>
-				 <div class="col-md-4 item-right">
-					 <div class="item">
-						 <div class="photo"><img src="assets/images/_icon-3.png" alt="Icon" /></div>					
-						 <span class="num">120 </span>
-						 <span class="header">
-							 <span>E-juices </span>
-							for cloudchasers winners
-						 </span>
-					 </div>
-				 </div>					
+
+			 <h3 id = "meetteam">Meet Techno Carnival Team! </h3>
+			 <div class = "photorow">
+
+			<div class = "person">
+				<img id = "photo" src="assets/images/vinaysir.jpg"  alt = "Vinay Sir" >
+				<span id = "personname">Vinay Saini</span>
+			</div>
+	        <div class = "person">
+				<img id = "photo" src="assets/images/deepali.jpg"  alt = "Deepali" >
+				<span id = "personname">Deepali Singh</span>
+			</div>
+			<div class = "person">
+				<img id = "photo" src="assets/images/deepanshi.jpg"  alt = "Deepanshi" >
+				<span id = "personname">Deepanshi Bansal</span>
+			</div>
+			<div class = "person">
+				<img id = "photo" src="assets/images/sparsh.jpg"  alt = "Deepali" >
+				<span id = "personname">Sparsh Wadhwa</span>
+			</div>
+
+</div>
+
+			 <div class = "photorow">
+
+			<div class = "person">
+				<img id = "photo" src="assets/images/rajat.jpg"  alt = "Rajat" >
+				<span id = "personname">Rajat Gupta</span>
+			</div>
+	<div class = "person">
+				<img id = "photo" src="assets/images/saurabh.jpg"  alt = "Saurabh" >
+				<span id = "personname">Saurabh Aggarwal</span>
+			</div>
+			<div class = "person">
+				<img id = "photo" src="assets/images/rishabh.jpg"  alt = "Rishabh" >
+				<span id = "personname">Rishabh Singh</span>
+			</div>
+			<div class = "person">
+				<img id = "photo" src="assets/images/heena.jpeg"  alt = "Heena" >
+				<span id = "personname">Heena Garg</span>
+			</div>
+
+</div>
+
+			 <div class = "photorow">
+
+			<div class = "person">
+				<img id = "photo" src="assets/images/rawat.jpeg"  alt = "Bhavya Rawat" >
+				<span id = "personname">Bhavya Rawat</span>
+			</div>
+	<div class = "person">
+				<img id = "photo" src="assets/images/vivek.jpg"  alt = "Vivek" >
+				<span id = "personname">Vivek Aggarwal</span>
+			</div>
+			<div class = "person">
+				<img id = "photo" src="assets/images/krishna.jpg"  alt = "Krishna" >
+				<span id = "personname">Krishna</span>
+			</div>
+			<div class = "person">
+				<img id = "photo" src="assets/images/saksham.jpg"  alt = "Saksham" >
+				<span id = "personname">Saksham</span>
+			</div>
+
+</div>
+
 			 </div>
-		 </div>
+		  
 	 </section>
 	 <section id="sponsors">
 		 <div class="container">	
@@ -378,6 +431,12 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 		 </div>	
 	 </section>
 
+<section id = "contactus">
+	<p>sample text</p>
+</section>
+
+
+
 	 <section id="form">
 		 <div class="container">
 			 <form>
@@ -452,7 +511,8 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 	 <footer>
 		 <div class="container">
 
-			 <img src="assets/images/logo.png" class="logo" alt="Logo" />
+			 <!-- <img src="assets/images/logo.png" class="logo" alt="Logo" /> -->
+			 <span id = "festname">TechnoCarnival</span>
 
 			 <ul class="menu-footer hidden-ms hidden-xs">
 					 <li><a href="#plan">Schedule </a></li>
@@ -469,33 +529,37 @@ Date Downloaded: 01-01-2018 19:44:12 !-->
 				 <div class="row">
 					 <div class="col-md-4 col-sm-4">
 						 <div class="date">day 1 -  <span>april 23 </span></div>
-						 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 19:00 __ </span>
+						 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 18:00 am </span>
 					 </div>
 					 <div class="col-md-4 col-sm-4">
 						 <div class="date">day 2 -  <span>april 24 </span></div>
-						 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 19:00 __ </span>
+						 <span class="time"><span class="fa fa-clock-o"></span>10:00 am - 18:00 am </span>
 					 </div>
 					 <div class="col-md-4 col-sm-4">
 						 <div class="date">day 3 -  <span>april 25 </span></div>
-						 <span class="time"><span class="fa fa-clock-o"></span>12:00 am - 17:00 __ </span>
+						 <span class="time"><span class="fa fa-clock-o"></span>12:00 am - 18:00 am </span>
 					 </div>
 				 </div>
 			 </div>
+			</div>
 
 			<!--  <div class="copy"><a href="http://like-themes.com">Like-themes </a> 2017 © All ______ Reserved  <a href="#">Terms of use </a></div>
  -->
 
 
 			 <ul class="social">
-				 <li><a href="#" class="fa fa-facebook"></a></li>
-				 <li><a href="#" class="fa fa-twitter"></a></li>
-				 <li><a href="#" class="fa fa-instagram"></a></li>
-				 <li><a href="#" class="fa fa-github"></a></li>
-				 <li><a href="#" class="fa fa-linkedin"></a></li>
-			 </ul>			
- <div class = "copy">Copyright©2017 - International Organisation Of Software Developers</div>
+				 <li><a href="https://www.facebook.com/IOSDMAIT/" target = "_blank" class="fa fa-facebook"></a></li>
+				 <li><a href="https://twitter.com/iosdofficial" target = "_blank" class="fa fa-twitter"></a></li>
+				 <li><a href="https://www.instagram.com/iosdofficial/" target = "_blank" class="fa fa-instagram"></a></li>
+				 <li><a href="https://github.com/IOSD" target = "_blank" class="fa fa-github"></a></li>
+				 <li><a href="https://www.linkedin.com/company/iosd/?trk=ppro_cprof" target = "_blank" class="fa fa-linkedin"></a></li>
+			 </ul>	
 
-		 </div>
+ <div class = "copy">Copyright©2017 - 
+ 	<!-- <div class = "iosdlink"> -->
+ International Organisation Of Software Developers</div>
+
+		 <!-- </div> -->
 	 </footer>
 
 
@@ -519,3 +583,4 @@ var marker = new google.maps.Marker({position: new google.maps.LatLng(28.719614,
      <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
  </body>
  </html>
+  
