--- a/index.html
+++ b/index.html
@@ -245,29 +245,93 @@ Your browser does not support the video tag.
 	 </section>
 	
 
-<!--  <section id="events">
+ <section id="events">
 		 <div class="container">
 			 <h3>Events </h3>
+			 
+
 			 <div class="row">
-			 -->
+			
 
-
-<!-- <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 	<div class="flipper">
 		<div class="front">
-			front content
+	<!-- 		front content
 			<ol>
 				<li>info</li>
 				<li>about</li>
 				<li>first event</li>
-			</ol>
+			</ol> -->
+				<span id = "event_header">MaitHacks</span>
 		</div>
 		<div class="back">
-			back content
-			<input id = "register-button" type="button" name="register" value = "register">
+			<!-- back content -->
+			
 		</div>
 	</div>
- -->
+</div>
+
+<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+	<!-- 		front content
+			<ol>
+				<li>info</li>
+				<li>about</li>
+				<li>first event</li>
+			</ol> -->
+		<span id = "event_header">CodeToLive</span>
+		</div>
+		<div class="back">
+			<!-- back content -->
+		
+		</div>
+	</div>
+</div>
+
+
+</div>
+<div class= "row">
+<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+	<!-- 		front content
+			<ol>
+				<li>info</li>
+				<li>about</li>
+				<li>first event</li>
+			</ol> -->
+		<span id = "event_header">UI/UX Designing</span>
+		</div>
+		<div class="back">
+			<!-- back content -->
+		
+		</div>
+	</div>
+</div>
+
+<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+	<!-- 		front content
+			<ol>
+				<li>info</li>
+				<li>about</li>
+				<li>first event</li>
+			</ol> -->
+			<span id = "event_header">Workshop</span>
+		</div>
+		<div class="back">
+			<!-- back content -->
+			
+		</div>
+	</div>
+</div>
+</div>
+
+</div>
+</section>
+
 
 
 			 <!-- 	<div class = "event">
